// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    10
     
    expenses
     totalling 
    $1,142.00
  </p>
</div>
`;

exports[`should correctly render expenses summary with one expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $2.30
  </p>
</div>
`;
